# TTT_hb

./: pyproject.toml  test.py  test_forward_pass.py
.claude/: settings.local.json
scripts/: run_ttt_gemma3.py
src/ponderTTT/kernels/: __init__.py
src/ponderTTT/models/: __init__.py  attention_interface.py  checkpoint.py  gemma3.py  gemma3_pretrained.py  ttt.py
