[project]
name = "ttt-hb"
version = "0.1.0"
description = "HyperBlaze implementation of PonderTTT, for more simplified codebase"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.2",
    "jax[tpu]>=0.8.2"
]

[project.optional-dependencies]
kaggle = ["kagglehub>=0.3.0"]
